# api/routers/api/apis.js
@@ -1,4 +1,4 @@
-const express = require("../../../node_modules/express");
+const express = require("express");
 const apiRouter = express.Router();
 const testController = require('../../controller/test');
 const authController = require('../../controller/auth/authController');
@@ -7,5 +7,6 @@ apiRouter.get("/test", authController.verify_token, testController.test_get_all)
 apiRouter.post("/testpost", testController.test_post);
 
 apiRouter.get("/token", authController.req_token);
+apiRouter.post("/create-token", authController.create_token_api);
 
 module.exports = apiRouter;
